--- a/frontend/covalent_challenge/package.json
+++ b/frontend/covalent_challenge/package.json
@@ -2,6 +2,7 @@
   "name": "covalent_challenge",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -12,10 +13,13 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "axios": "^0.24.0",
+    "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
