--- a/frontend/covalent_challenge/package.json
+++ b/frontend/covalent_challenge/package.json
@@ -14,12 +14,15 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "axios": "^0.24.0",
-    "bootstrap": "^4.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "bootstrap": "^4.6.1",
+    "react": "^16.14.0",
+    "react-bootstrap": "^2.0.3",
+    "react-dom": "^16.14.0",
+    "react-is": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "styled-components": "^5.3.3",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.17"
   }
 }
